PyAMF Changelog
===============

This file contains information about the changes between the different versions
of PyAMF.

0.4.0 (unreleased)
------------------
 - Added ability to set the HTTP referer in remoting client (Ticket:316)
 - Fixed issue where the AMF3 encoder assumed objects with a 'tag' attribute
   needed XML encoding. Reported by cy-man (Ticket:303)
 - Solved issue with repr for AbstractMessage. Reported by datafunk (Ticket:283)
 - Content-type was missing in POST requests from the AMF client. Reported by
   magog (Ticket:304)
 - Fixed issue with the unit tests for Django (Ticket:281)

0.3.1 (2008-05-04)
------------------
 - Importing module now has tests (Ticket:266)
 - Django model adapter now imported only when django.db.models is imported
   (Ticket:261)
 - Google Model/Expando encoding now works out of the box
 - Fixed issue with Remote Object destination (Ticket:270)
 - Added a new gateway for the Google App Engine - see
   pyamf.remoting.gateway.google.WebAppGateway (Ticket:253)
 - amf0 Encoder now takes amf3 contexts into account (Ticket:268)
 - amf*.encode helpers can now accept multiple arguments (Ticket:267)
 - Removed the dependancy of fpconst for Python 2.5 or newer (Ticket:243)
 - Solved issue with AMFPHP exceptions in AMF client (Ticket:258) 
 - Fixed issue with url parsing in AMF client (Ticket:256)
 - Client no longer raises httplib.ResponseNotReady when making multiple
   requests using the same RemotingService (Ticket:254)

0.3 (2008-04-14)
----------------
 - Added compatibility module for Google App Engine (Ticket:247)
 - Fixed the signed interpretation of compressed integers in AMF3 (Ticket:241)
 - Classic class decoding would throw an AttributeError (Ticket:248)
 - Reloading adapter modules caused errors in Django, Pylons and Google App
   Engine. Resolved by removing dependancy on Importing module and incorporating
   into pyamf.util (Ticket:250)
 - Adapter framework can now be fired when only loading submodules (Ticket:246)